--- a/index.html
+++ b/index.html
@@ -1,31 +1,44 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/mascot.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- SEO -->
-    <title>Werewolf Bot Discord - Chơi Ma Sói cùng bạn bè</title>
-    <meta name="description" content="Werewolf Bot Discord giúp bạn và bạn bè chơi Ma Sói ngay trên Discord. Tạo phòng, tham gia, và trải nghiệm trò chơi Ma Sói vui nhộn." />
-    <meta name="keywords" content="Werewolf Bot Discord, Ma Sói Discord, Discord Bot, Chơi Ma Sói Online, Werewolf Game" />
-    <meta name="author" content="Kiên Học Code || Kolas" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/mascot.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Open Graph (Facebook, Zalo, Discord, ... khi share link) -->
-    <meta property="og:title" content="Werewolf Bot Discord - Chơi Ma Sói cùng bạn bè" />
-    <meta property="og:description" content="Bot Discord hỗ trợ chơi Ma Sói, dễ dàng tạo phòng, tham gia, và quản lý trò chơi ngay trong server Discord của bạn." />
-    <meta property="og:image" content="/mascot.png" />
-    <meta property="og:url" content="https://wwolf.vercel.app" />
-    <meta property="og:type" content="website" />
+  <!-- SEO -->
+  <title>Werewolf Bot Discord - Chơi Ma Sói cùng bạn bè</title>
+  <meta name="description"
+    content="Werewolf Bot Discord giúp bạn và bạn bè chơi Ma Sói ngay trên Discord. Tạo phòng, tham gia, và trải nghiệm trò chơi Ma Sói vui nhộn." />
+  <meta name="keywords"
+    content="Werewolf Bot Discord, Ma Sói Discord, Discord Bot, Chơi Ma Sói Online, Werewolf Game" />
+  <meta name="author" content="Kiên Học Code || Kolas" />
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Werewolf Bot Discord" />
-    <meta name="twitter:description" content="Chơi Ma Sói ngay trên Discord với Werewolf Bot." />
-    <meta name="twitter:image" content="/mascot.png" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Open Graph (Facebook, Zalo, Discord, ... khi share link) -->
+  <meta property="og:title" content="Werewolf Bot Discord - Chơi Ma Sói cùng bạn bè" />
+  <meta property="og:description"
+    content="Bot Discord hỗ trợ chơi Ma Sói, dễ dàng tạo phòng, tham gia, và quản lý trò chơi ngay trong server Discord của bạn." />
+  <meta property="og:image" content="/mascot.png" />
+  <meta property="og:url" content="https://wwolf.vercel.app" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Werewolf Bot Discord" />
+  <meta name="twitter:description" content="Chơi Ma Sói ngay trên Discord với Werewolf Bot." />
+  <meta name="twitter:image" content="/mascot.png" />
+  <meta name="google-adsense-account" content="ca-pub-9753529299707587">
+  <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+  <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-9753529299707587" data-ad-slot="8543383852"
+    data-auto-format="rspv" data-full-width="">
+    <div overflow=""></div>
+  </amp-ad>
+</body>
+
 </html>
