--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
   <meta name="twitter:image" content="/mascot.png" />
   <meta name="google-adsense-account" content="ca-pub-9753529299707587">
   <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9753529299707587"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
