--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO -->
-  <title>Werewolf Bot Discord - Chơi Ma Sói cùng bạn bè</title>
+  <title>Keldo Bot Discord - Chơi Ma Sói cùng bạn bè</title>
   <meta name="description"
-    content="Werewolf Bot Discord giúp bạn và bạn bè chơi Ma Sói ngay trên Discord. Tạo phòng, tham gia, và trải nghiệm trò chơi Ma Sói vui nhộn." />
+    content="Keldo Bot Discord giúp bạn và bạn bè chơi Ma Sói ngay trên Discord. Tạo phòng, tham gia, và trải nghiệm trò chơi Ma Sói vui nhộn." />
   <meta name="keywords"
-    content="Werewolf Bot Discord, Ma Sói Discord, Discord Bot, Chơi Ma Sói Online, Werewolf Game" />
+    content="Keldo Bot Discord, Ma Sói Discord, Discord Bot, Chơi Ma Sói Online, Werewolf Game, Quản lý Server,..." />
   <meta name="author" content="Kiên Học Code || Kolas" />
 
   <!-- Open Graph (Facebook, Zalo, Discord, ... khi share link) -->
-  <meta property="og:title" content="Werewolf Bot Discord - Chơi Ma Sói cùng bạn bè" />
+  <meta property="og:title" content="Keldo Bot Discord - Chơi Ma Sói cùng bạn bè" />
   <meta property="og:description"
     content="Bot Discord hỗ trợ chơi Ma Sói, dễ dàng tạo phòng, tham gia, và quản lý trò chơi ngay trong server Discord của bạn." />
   <meta property="og:image" content="/mascot.png" />
