--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     data-auto-format="rspv" data-full-width="">
     <div overflow=""></div>
   </amp-ad>
+  <script type='text/javascript' src='//pl27899802.effectivegatecpm.com/20/da/bd/20dabd413c98b4a591ffefeed4f67b89.js'></script>
 </body>
 
 </html>
