--- a/index.html
+++ b/index.html
@@ -34,13 +34,47 @@
 </head>
 
 <body>
+  <script type="text/javascript">
+    atOptions = {
+      'key': '482e95aa670e11d5c512657cfcf6e778',
+      'format': 'iframe',
+      'height': 60,
+      'width': 468,
+      'params': {}
+    };
+  </script>
+  <script type="text/javascript"
+    src="//www.highperformanceformat.com/482e95aa670e11d5c512657cfcf6e778/invoke.js"></script>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
   <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-9753529299707587" data-ad-slot="8543383852"
     data-auto-format="rspv" data-full-width="">
     <div overflow=""></div>
   </amp-ad>
-  <script type='text/javascript' src='//pl27899802.effectivegatecpm.com/20/da/bd/20dabd413c98b4a591ffefeed4f67b89.js'></script>
+  <script type='text/javascript'
+    src='//pl27899802.effectivegatecpm.com/20/da/bd/20dabd413c98b4a591ffefeed4f67b89.js'></script>
+  <script type="text/javascript">
+    atOptions = {
+      'key': 'ad32384b3d33bc8b99ac20ad64c59cd7',
+      'format': 'iframe',
+      'height': 90,
+      'width': 728,
+      'params': {}
+    };
+  </script>
+  <script type="text/javascript"
+    src="//www.highperformanceformat.com/ad32384b3d33bc8b99ac20ad64c59cd7/invoke.js"></script>
+  <script type="text/javascript">
+    atOptions = {
+      'key': '482e95aa670e11d5c512657cfcf6e778',
+      'format': 'iframe',
+      'height': 60,
+      'width': 468,
+      'params': {}
+    };
+  </script>
+  <script type="text/javascript"
+    src="//www.highperformanceformat.com/482e95aa670e11d5c512657cfcf6e778/invoke.js"></script>
 </body>
 
 </html>
