feat: qc from monetag

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9753529299707587"
     crossorigin="anonymous"></script>
+   <script src="https://3nbf4.com/act/files/tag.min.js?z=10075461" data-cfasync="false" async></script>
+<script>(function(s){s.dataset.zone='10075465',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 </head>
 
 <body>
