--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
   <meta name="twitter:description" content="Chơi Ma Sói ngay trên Discord với Werewolf Bot." />
   <meta name="twitter:image" content="/mascot.png" />
   <meta name="google-adsense-account" content="ca-pub-9753529299707587">
-  <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+  <!-- <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9753529299707587"
     crossorigin="anonymous"></script>
    <script src="https://3nbf4.com/act/files/tag.min.js?z=10075461" data-cfasync="false" async></script>
-<script>(function(s){s.dataset.zone='10075465',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+<script>(function(s){s.dataset.zone='10075465',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script> -->
 </head>
 
 <body>
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     atOptions = {
       'key': '482e95aa670e11d5c512657cfcf6e778',
       'format': 'iframe',
@@ -44,18 +44,18 @@
       'width': 468,
       'params': {}
     };
-  </script>
-  <script type="text/javascript"
-    src="//www.highperformanceformat.com/482e95aa670e11d5c512657cfcf6e778/invoke.js"></script>
+  </script> -->
+  <!-- <script type="text/javascript"
+    src="//www.highperformanceformat.com/482e95aa670e11d5c512657cfcf6e778/invoke.js"></script> -->
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
-  <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-9753529299707587" data-ad-slot="8543383852"
+  <!-- <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-9753529299707587" data-ad-slot="8543383852"
     data-auto-format="rspv" data-full-width="">
     <div overflow=""></div>
   </amp-ad>
   <script type='text/javascript'
-    src='//pl27899802.effectivegatecpm.com/20/da/bd/20dabd413c98b4a591ffefeed4f67b89.js'></script>
-  <script type="text/javascript">
+    src='//pl27899802.effectivegatecpm.com/20/da/bd/20dabd413c98b4a591ffefeed4f67b89.js'></script> -->
+  <!-- <script type="text/javascript">
     atOptions = {
       'key': 'ad32384b3d33bc8b99ac20ad64c59cd7',
       'format': 'iframe',
@@ -63,8 +63,8 @@
       'width': 728,
       'params': {}
     };
-  </script>
-  <script type="text/javascript"
+  </script> -->
+  <!-- <script type="text/javascript"
     src="//www.highperformanceformat.com/ad32384b3d33bc8b99ac20ad64c59cd7/invoke.js"></script>
   <script type="text/javascript">
     atOptions = {
@@ -74,9 +74,9 @@
       'width': 468,
       'params': {}
     };
-  </script>
-  <script type="text/javascript"
-    src="//www.highperformanceformat.com/482e95aa670e11d5c512657cfcf6e778/invoke.js"></script>
+  </script> -->
+  <!-- <script type="text/javascript"
+    src="//www.highperformanceformat.com/482e95aa670e11d5c512657cfcf6e778/invoke.js"></script> -->
 </body>
 
 </html>
